bk_ida/gccida/g2/oprs_not_set_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/oprs_not_set_p/src/gcse.c:3284:15: error: use of undeclared identifier 'uid_cuid_1'
*( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint), 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/oprs_not_set_p/src/gcse.c:3322:33: error: expected expression
while ( oprs_not_set_p( *( rtx *)&rtwint[2 * v9 + 2], insn) ) 
                                ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/oprs_not_set_p/src/obj/gcse.o] Error 1
